# sgame

./: .gitignore  LICENSE  README.md  cards.json  main.py  pyproject.toml  requirements.in  requirements.txt
sgame/: bot_test.py  card.py  consts.py  create_card.py  errors.py  log.py
sgame/game/: card_type.py
sgame/game/database/: connect.py  create_cards_table.py  database.py  insert_card.py  insert_cards.py  read_notion_database.py
