[project]
name = "sgame"
version = "0.1.0"
description = "A module which will handle both the sgame[temporary name] app and a way to play it through a discord bot"
authors = [
    {name = "Wavy-34",email = "179828417+Wavy-34@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs (==2.4.4)",
    "aiohttp (==3.11.11)",
    "aiosignal (==1.3.2)",
    "attrs (==24.3.0)",
    "discord (==2.3.2)",
    "discord-py (==2.4.0)",
    "frozenlist (==1.5.0)",
    "idna (==3.10)",
    "load-dotenv (==0.1.0)",
    "multidict (==6.1.0)",
    "propcache (==0.2.1)",
    "python-dotenv (==1.0.1)",
    "yarl (==1.18.3)",
    "audioop-lts (==0.2.1)"
]


[build-system]


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
ruff = "^0.9.2"

